# utility-bill-scraper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ENOVA_SCRAPER_STATUS.md  Extract_Kitchener_Utilities_data.ipynb  LICENSE.md  MANIFEST.in  README.ipynb  README.md  README_ENOVA.md  SCRAPER_COMPLETE.md  UTILITY_SCRAPERS_STATUS.md  apt.txt  environment.yaml  environment.yml  pixi.toml  pyproject.toml  scrape_2022_2024.py  scrape_available_data.py  scrape_enova.py  scrape_kitchener_utilities.py  scrape_recent.py  setup.cfg  setup.py
.github/workflows/: build.yml  publish.yml  python-app.yml  scheduled-update.yml  test.yml  update-kitchener-utilities.yml  update-kwhydro.yml
notebooks/: demo_enbridge.py  demo_kitchener_utilities.ipynb  demo_kitchener_utilities.py  demo_kitchener_wilmot_hydro.py  demo_utility_bill_scraper.py  remote_storage_sync.py
notebooks/canada/on/: enbridge.py  kitchener_utilities.ipynb  kitchener_utilities.py  kitchener_wilmot_hydro.ipynb  kitchener_wilmot_hydro.py  utility_bill_scraper.py
notebooks/features/: case_study.ipynb  hourly_data.py  remote_storage_sync.py
notebooks/features/case_study_data/: electricity.csv  gas.csv
src/utility_bill_scraper/: __init__.py  _version.py  enbridge.py  google_drive_helpers.py  kitchener_utilities.py  kitchener_wilmot_hydro.py
src/utility_bill_scraper/canada/on/: enova_power.py  kitchener_utilities.py  kitchener_wilmot_hydro.py
tests/: test_kitchener_utilities.py
tests/kitchener-wilmot-hydro/: 2018-12-27-eBill.html
utility_bill_scraper/: __init__.py  enbridge.py  kitchener_utilities.py  kitchener_wilmot_hydro.py
