[tool.poetry]
name = "utility-bill-scraper"
version = "v0.2.2"
description = "Utility bill scraper for extracting data from pdfs and websites."
license = "BSD-3-Clause"
readme = "README.md"
authors = ["Ryan Fobel <ryan@fobel.net>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "^1.16"
pandas = "^1.1.0"
selenium = "^3.141.0"
arrow = "^1.2.0"
pdfminer = "^20191125"
beautifulsoup4 = "^4.6.0"
matplotlib = "^3.2"
google-api-python-client = "^2.27.0"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.1.18"
jupytext = "^1.13.0"
flake8 = "^4.0.1"
black = {extras = ["jupyter"], version = "^21.11b1"}
pytest-cov = "^3.0.0"

[tool.poetry-dynamic-versioning]
enable = true
format = "v{base}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ubs = "utility_bill_scraper.bin.ubs:main"
